# crypto-backtesting

./: .coverage 2  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_PLAN.md  PHASE_3_STATUS.md  PRD.md  PRECISION_CONSIDERATIONS.md  README.md  TECHNICAL_SPEC.md  coverage.xml  pyproject.toml
.claude/agents/: branch-code-reviewer.md  project-docs-maintainer.md
.github/workflows/: ci.yml
data/binance/futures/BTCUSDT/1h/: BTCUSDT_1h_2025-01-01.csv  BTCUSDT_1h_2025-01-02.csv  BTCUSDT_1h_2025-01-03.csv
scripts/: check-protected-files.sh  convert_trades_to_ohlcv.py  download_binance_data.py
src/api/: main.py
src/api/routers/: backtest 2.py  backtest.py  data.py
src/api/schemas/: api_models.py
src/core/: constants.py  protocols.py
src/core/enums/: __init__.py  position_types.py  symbols.py  timeframes.py  trading_modes.py
src/core/exceptions/: backtest.py
src/core/interfaces/: data 2.py  data.py  portfolio.py  strategy.py
src/core/models/: backtest 2.py  backtest.py  portfolio 2.py  portfolio.py  portfolio_core.py  portfolio_helpers.py  portfolio_metrics.py  portfolio_original.py  portfolio_risk.py  portfolio_trading.py  position.py  trade.py
src/core/types/: __init__.py  financial.py
src/core/utils/: decorators.py  validation.py
src/infrastructure/data/: __init__.py  cache_interfaces.py  cache_statistics.py  csv_cache.py  csv_cache_core.py  csv_file_loader.py  csv_loader.py  csv_utils.py  csv_validator.py  loading_strategies.py  loading_strategy_selector.py  memory_tracker.py  ohlcv_cleaner.py  ohlcv_resampler.py  ohlcv_summary_generator.py  ohlcv_validator.py  processor.py  technical_indicators.py
tests/fixtures/data/binance/futures/BTCUSDT/1h/: BTCUSDT_1h_2025-01-08.csv  BTCUSDT_1h_2025-01-09.csv  BTCUSDT_1h_2025-01-20.csv
tests/integration/: test_data_layer_integration.py
tests/unit/: test_backtest.py  test_backtest_config_validation.py  test_core_types.py  test_csv_cache.py  test_csv_cache_core.py  test_csv_file_loader.py  test_csv_loader.py  test_csv_loader_advanced.py  test_csv_loader_basic.py  test_csv_loader_performance.py  test_csv_loader_validation.py  test_csv_validator.py  test_data_processor.py  test_decorators.py  test_enums.py  test_exceptions.py  test_financial_types.py  test_loading_strategies.py  test_loading_strategies_core.py  test_loading_strategies_selector.py  test_loading_strategies_streaming.py  test_portfolio.py  test_portfolio_api.py  test_portfolio_risk.py  test_portfolio_trading.py  test_portfolio_validation.py  test_position.py  test_position_factory.py  test_technical_indicators.py  test_validation.py
